Use simplieid collector construct available in later JDK versions